# excelagent

./: .gitignore  1. Setup.command  2. Build Knowledge.command  3. Reconcile Workbook.command  4. Show Summary.command  Data  Dockerfile  GITHUB_UPLOAD_SUMMARY.md  Knowledge Base  Makefile  Monitor.command  Publish to GitHub.command  README.md  Run Summaries  Session Notes.md  Training Data  comprehensive_ncb_flex_analysis.py  detailed_audit_reconciliation_agent.py  detailed_ncb_flex_analysis.py  docker-compose.yml  enhanced_ncb_reconciliation_agent.py  enhanced_ncb_reconciliation_analysis.py  enhanced_reconciliation_framework.py  ncb_gl_reconciliation_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ncb_flex_reconciliation.py  test_enhanced_reconciliation.py
docs/: INSTALLATION_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  agent.md  agent_accuracy_review_summary.md  agent_vs_tool_distinction.md  ai_enhancement_checklist.md  ai_enhancement_plan.md  audit_trail_system.md  codebase_update_summary.md  complete_upgrade_summary.md  deep_thinking_analysis_results.md  deep_thinking_system_summary.md  detailed_audit_trail_results.md  detailed_data_validation.md  enhanced_chat_system.md  enhanced_ncb_analysis_results.md  enhanced_reconciliation_results.md  excel_agent_enhancement_plan.md  gl_balance_extraction_enhancement.md  implementation_summary.md  integrated_ai_agent_system.md  issues_fixed_summary.md  layout_optimization.md  line_by_line_review_summary.md  live_test_summary.md  master_orchestrator_report.md  naming_conventions_applied.md  ncb_flex_analysis_results.md  ncb_gl_reconciliation_results.md  ncb_process_documentation_review.md  phase2_implementation_summary.md  phase3_implementation_summary.md  project_structure.md  reconciliation_analysis_report.md  senior_developer_organization_complete.md  sequential_agent_upgrade_summary.md  test_run_results.md  training_document_analysis_complete.md  training_document_analysis_summary_180833.md  (+6 more)
scripts/: 01_setup.command  02_build_knowledge.command  03_reconcile_workbook.command  04_show_summary.command  A_ai_thinking_demo.py  A_run_ai_thinking_task.py  T_analyze_gl_debits_credits.py  T_complete_transaction_audit.py  T_credit_union_reconciliation_legend.py  T_display_ai_report.py  T_excel_audit_generator.py  T_live_diagnostic_test.py  T_live_monitoring_system.py  T_run_with_api_key.py  T_show_detailed_report.py  T_simple_report_generator.py  launch_ai_thinking.command  launch_excel_agent.command  launch_unified_dashboard.command  monitor.command  publish_to_github.command  setup_ai_thinking.command  setup_ssh_github.command
src/excel_agent/: __init__.py  cli.py
src/excel_agent/agents/: A_ai_thinking_agent.py  A_bank_cross_match_agent.py  A_base_agent.py  A_data_consolidation_agent.py  A_data_quality_validator.py  A_discrepancy_discovery_agent.py  A_enhanced_thinking_agent.py  A_high_variance_investigator.py  A_reconciliation_matcher.py  A_strands_base_agent.py  A_timing_difference_handler.py  A_vision_enhanced_ai_agent.py  bank_statement_processor.py  gl_extraction_agent.py  orchestration_agent.py  reconciliation_validator.py  report_generator.py  variance_analyzer.py
src/excel_agent/api/: dashboard.py  legacy_dashboard.py  live_dashboard.py
src/excel_agent/config/: configuration_template.py  logging_config.json  settings.py
src/excel_agent/core/: A_agent_accuracy_reviewer.py  A_agent_improvement_plan.py  A_ai_reconciliation_agent.py  A_complete_recommended_actions.py  (+32 more)
templates/: live_dashboard.html  unified_dashboard.html
tests/integration/: test_T_performance_testing.py
tests/unit/: test_A_ai_reconciliation.py  test_A_simple_ai.py  test_T_corrected_accounting.py  test_T_credit_union_reconciliation.py  test_T_enhanced_gl_analysis.py  test_T_system.py  test_agent_integration.py  test_improved_agents.py
(+4 files in other folders)
